--- a/learn-haskell.cabal
+++ b/learn-haskell.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: e2a2085f291c7df8a05a16a7f1cc69757b1a09e769a0684a973a6a4301d0e7a5
+-- hash: e85499f134a60a2fabbe6f64a0d9d0af902fd491ce2009872f5953a6dfe8e7b1
 
 name:           learn-haskell
 version:        0.1.0.0
@@ -30,6 +30,7 @@ library
       Lib
       List
       ListContinued
+      ListsAgain
   other-modules:
       Paths_learn_haskell
   hs-source-dirs:
